<resources>
    <string name="app_name">Fitness World</string>
    <string name="textView3">AboutYou</string>
    <string name="text5">Beginner</string>
    <string name="text6">Advanced</string>
    <string name="toolbar3">toolbar3</string>
    <string name="textView9">WomenFullBody1</string>
    <string name="textView10">Workouts1</string>
    <string name="textView11">AboutYou1</string>
    <string name="textView12">BeginnerOrAdvanced</string>
    <string name="textView13">Goal1</string>
    <string name="button3">BeginnersWorkoutSchedules</string>
    <string name="button2">AdvancedWorkoutSchedules</string>
    <string name="toolbar4">toolbar4</string>
    <string name="imgview1">imgview1</string>
    <string name="toolbar5">toolbar5</string>
    <string name="imageView3">imageView3</string>
    <string name="textView14">bmr</string>
    <string name="edtInage">edtInage</string>
    <string name="txtHeight">txtHeight</string>
    <string name="edtInheight">edtInheight</string>
    <string name="txtWeight">txtWeight</string>
    <string name="edtInweight">edtInweight</string>
    <string name="btnCalculate">btnCalculate</string>
    <string name="edtAns">edtAns</string>
    <string name="txtAge">txtAge</string>
    <string name="txtBmrforwomen">txtBmrforwomen</string>
    <string name="imageView4">imageView4</string>
    <string name="textView15">textView15</string>
    <string name="textView16">20MinBeginners</string>
    <string name="txtJumpingjack">txtJumpingjack</string>
    <string name="txtSquat">txtSquat</string>
    <string name="txtCurtsey">txtCurtsey</string>
    <string name="txtJumptwist">txtJumptwist</string>
    <string name="txtSlowbicyclecrunch">txtSlowbicyclecrunch</string>
    <string name="txtCrunchwstraightlegs">txtCrunchwstraightlegs</string>
    <string name="txtSlowmountainclimber">txtSlowmountainclimber</string>
    <string name="txtPlank">txtPlank</string>
    <string name="txtSuperman">txtSuperman</string>
    <string name="txtHipstretchright">txtHipstretchright</string>
    <string name="txtHipstretchleft">txtHipstretchleft</string>
    <string name="toolbar6">toolbar6</string>
    <string name="imageView5">imageView5</string>
    <string name="txtFullBodyWorkouts">txtFullBodyWorkouts</string>
    <string name="txtWomenFullBody">txtWomenFullBody</string>
    <string name="txtWorkouts">txtWorkouts</string>
    <string name="txtAboutYou">txtAboutYou</string>
    <string name="txtCategory">txtCategory</string>

    <string name="txtGoal">txtGoal</string>

    <string name="btnInsert">btnInsert</string>
    <string name="btnUpdate">btnUpdate</string>
    <string name="btnDelete">btnDelete</string>
    <string name="btnView">btnView</string>
    <string name="txtName">txtName</string>

    <string name="imgfirst">imgfirst</string>
    <string name="imgcalculate">imgcalculate</string>
    <string name="btnback">btnback</string>
    <string name="imgView7">imgView7</string>
    <string name="txtSelectWorkout">txtSelectWorkout</string>
    <string name="toolbar7">toolbar7</string>
    <string name="txtBeginnerWorkout">txtBeginnerWorkout</string>
    <string name="txtBExA">JumpingJack</string>
    <string name="txtBExB">Squat</string>
    <string name="txtBExC">CurtseyLunge</string>
    <string name="txtBExD">SlowBicycle</string>
    <string name="txtBExE">CrunchStraight</string>
    <string name="txtBExF">SlowMountain</string>
    <string name="txtBExG">Plank</string>
    <string name="txtBExH">Superman</string>
    <string name="txtBExI">HipStretchRight</string>
    <string name="txtBExJ">HipStretchLeft</string>
    <string name="btnBackB">btnBackB</string>
    <string name="imgBPage">imgBPage</string>
    <string name="imgView8">imgView8</string>
    <string name="txtSelectWorkout1">txtSelectWorkout1</string>
    <string name="txtAdvancedWorkout">txtAdvancedWorkout</string>
    <string name="txtAExA">HighKnees</string>
    <string name="txtAExB">SquatHold</string>
    <string name="txtAExC">WidePushUps</string>
    <string name="txtAExD">TRotation</string>
    <string name="txtAExE">ClosePushUps</string>
    <string name="txtAExF">SpiderElbowPlank</string>
    <string name="txtAExG">Superman</string>
    <string name="txtAExH">SupermanHold</string>
    <string name="txtAExI">Crunch</string>
    <string name="txtAExJ">JackKnife</string>
    <string name="txtAExK">ABHold</string>
    <string name="txtAExL">TwistingJump</string>
    <string name="txtAExM">GluteBridgeHold</string>
    <string name="btnBackA">btnBackA</string>
    <string name="imgAPage">imgAPage</string>
    <string name="btnFirstNext">btnFirstNext</string>
    <string name="name">name</string>
    <string name="category">category</string>
    <string name="Goal">Goal</string>
    <string name="txtBExL">txtBExL</string>
    <string name="toolbarBeExA">toolbarBeExA</string>
    <string name="imgViewBeExA">imgViewBeExA</string>
    <string name="txtViewBeExA">txtViewBeExA</string>
    <string name="txtViewJumJack">txtViewJumJack</string>
    <string name="txtTimer1">txtTimer1</string>
    <string name="toolbarBeExB">toolbarBeExB</string>
    <string name="imgViewBeExB">imgViewBeExB</string>
    <string name="txtViewBeExB">txtViewBeExB</string>
    <string name="txtViewSquat">txtViewSquat</string>
    <string name="gifa">gifa</string>
    <string name="gifb">gifb</string>
    <string name="txtTimer2">txtTimer2</string>
    <string name="toolbarBeExC">toolbarBeExC</string>
    <string name="imgViewBeExC">imgViewBeExC</string>
    <string name="txtViewBeExC">txtViewBeExC</string>
    <string name="txtViewCurtseyLunge">txtViewCurtseyLunge</string>
    <string name="gifc">gifc</string>
    <string name="txtTimer3">txtTimer3</string>
    <string name="toolbarBeExD">toolbarBeExD</string>
    <string name="imgViewBeExD">imgViewBeExD</string>
    <string name="txtViewBeExD">txtViewBeExD</string>
    <string name="txtViewSlowBicycleCrunch">txtViewSlowBicycleCrunch</string>
    <string name="gifd">gifd</string>
    <string name="txtTimer4">txtTimer4</string>
    <string name="toolbarBeExE">toolbarBeExE</string>
    <string name="imgViewBeExE">imgViewBeExE</string>
    <string name="txtViewBeExE">txtViewBeExE</string>
    <string name="txtViewCrunchWithStraightLegs">txtViewCrunchWithStraightLegs</string>
    <string name="gife">gife</string>
    <string name="txtTimer5">txtTimer5</string>
    <string name="toolbarBeExF">toolbarBeExF</string>
    <string name="imgViewBeExF">imgViewBeExF</string>
    <string name="txtViewBeExF">txtViewBeExF</string>
    <string name="txtViewSlowMountainClimber">txtViewSlowMountainClimber</string>
    <string name="giff">giff</string>
    <string name="txtTimer6">txtTimer6</string>
    <string name="toolbarAdExA">toolbarAdExA</string>
    <string name="imgViewAdExA">imgViewAdExA</string>
    <string name="txtViewAdExA">txtViewAdExA</string>
    <string name="txtViewHighKnees">txtViewHighKnees</string>
    <string name="gifada">gifada</string>
    <string name="txtTimer7">txtTimer7</string>
    <string name="toolbarAdExB">toolbarAdExB</string>
    <string name="imgViewAdExB">imgViewAdExB</string>
    <string name="txtViewAdExB">txtViewAdExB</string>
    <string name="txtViewSquatHold">txtViewSquatHold</string>
    <string name="imgViewSquatHold">imgViewSquatHold</string>
    <string name="txtTimer8">txtTimer8</string>
    <string name="toolbarAdExC">toolbarAdExC</string>
    <string name="imgViewAdExC">imgViewAdExC</string>
    <string name="txtViewAdExC">txtViewAdExC</string>
    <string name="txtViewWidePushUps">txtViewWidePushUps</string>
    <string name="gifadc">gifadc</string>
    <string name="txtTimer9">txtTimer9</string>
    <string name="toolbarAdExD">toolbarAdExD</string>
    <string name="imgViewAdExD">imgViewAdExD</string>
    <string name="txtViewAdExD">txtViewAdExD</string>
    <string name="txtViewTRotation">txtViewTRotation</string>
    <string name="gifadd">gifadd</string>
    <string name="txtTimer10">txtTimer10</string>
    <string name="toolbarAdExE">toolbarAdExE</string>
    <string name="imgViewAdExE">imgViewAdExE</string>
    <string name="txtViewAdExE">txtViewAdExE</string>
    <string name="txtViewSpiderElbowPlank">txtViewSpiderElbowPlank</string>
    <string name="gifade">gifade</string>
    <string name="txtTimer11">txtTimer11</string>
    <string name="toolbarAdExF">toolbarAdExF</string>
    <string name="imgViewAdExF">imgViewAdExF</string>
    <string name="txtViewAdExF">txtViewAdExF</string>
    <string name="txtViewSupermanHold">txtViewSupermanHold</string>
    <string name="imgViewSupermanHold">imgViewSupermanHold</string>
    <string name="txtTimer12">txtTimer12</string>


</resources>