<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity5">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar5"
        android:layout_width="416dp"
        android:layout_height="85dp"
        android:background="#FA2D73"
        android:contentDescription="@string/toolbar5"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="34dp"
        android:layout_height="33dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:contentDescription="@string/imageView3"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar5"
        app:layout_constraintEnd_toStartOf="@+id/textView14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar5"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="260dp"
        android:layout_height="27dp"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        android:contentDescription="@string/textView14"
        android:text="BMR"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar5"
        app:layout_constraintEnd_toEndOf="@+id/toolbar5"
        app:layout_constraintTop_toTopOf="@+id/toolbar5"
        app:layout_constraintVertical_bias="0.448" />

    <TextView
        android:id="@+id/txtBmrforwomen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/txtBmrforwomen"
        android:text="BMR For Women"
        android:textColor="#DC2865"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar5" />

    <TextView
        android:id="@+id/txtAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/txtAge"
        android:text="Age       :"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtBmrforwomen" />

    <EditText
        android:id="@+id/edtInage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:contentDescription="@string/edtInage"
        android:ems="10"
        android:hint="age in years"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/edtInheight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.629"
        app:layout_constraintStart_toEndOf="@+id/txtAge"
        app:layout_constraintTop_toBottomOf="@+id/txtBmrforwomen"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="EditableContentDescCheck,EditableContentDescCheck" />

    <TextView
        android:id="@+id/txtHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/txtHeight"
        android:text="Height  :"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAge" />

    <EditText
        android:id="@+id/edtInheight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:contentDescription="@string/edtInheight"
        android:ems="10"
        android:hint="height in cm"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/edtInweight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.375"
        app:layout_constraintStart_toEndOf="@+id/txtHeight"
        tools:ignore="EditableContentDescCheck,EditableContentDescCheck" />

    <TextView
        android:id="@+id/txtWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/txtWeight"
        android:text="Weight  :"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtHeight" />

    <EditText
        android:id="@+id/edtInweight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/edtInweight"
        android:ems="10"
        android:hint="weight in kg"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.375"
        app:layout_constraintStart_toEndOf="@+id/txtWeight"
        app:layout_constraintTop_toBottomOf="@+id/txtHeight"
        tools:ignore="EditableContentDescCheck,EditableContentDescCheck" />

    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="167dp"
        android:layout_height="62dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/btnCalculate"
        android:text="Calculate"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:backgroundTint="#E6437A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtInweight" />

    <EditText
        android:id="@+id/edtAns"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/edtAns"
        android:textAlignment="center"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="#8E133D"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/imgcalculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCalculate"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="EditableContentDescCheck,EditableContentDescCheck" />

    <ImageView
        android:id="@+id/imgcalculate"
        android:layout_width="283dp"
        android:layout_height="115dp"
        android:layout_marginBottom="4dp"
        android:contentDescription="@string/imgcalculate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/pic5" />

    <Button
        android:id="@+id/btnback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/btnback"
        android:text="BACK"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:backgroundTint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imgcalculate"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>