<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivityBeExA">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarBeExA"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:background="#FA2D73"
        android:contentDescription="@string/toolbarBeExA"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />


    <ImageView
        android:id="@+id/imgViewBeExA"
        android:layout_width="48dp"
        android:layout_height="39dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="342dp"
        android:layout_marginBottom="603dp"
        android:contentDescription="@string/imgViewBeExA"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24" />

    <TextView
        android:id="@+id/txtViewBeExA"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="-7dp"
        android:layout_marginBottom="591dp"
        android:contentDescription="@string/txtViewBeExA"
        android:text="20 min Beginners Workout Schedule No Equipment"
        android:textSize="20sp" />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/gifa"
        android:layout_width="wrap_content"
        android:layout_height="326dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="200dp"
        android:contentDescription="@string/gifa"
        android:src="@drawable/exa" />

    <TextView
        android:id="@+id/txtViewJumJack"
        android:layout_width="209dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="115dp"
        android:layout_marginEnd="87dp"
        android:layout_marginBottom="506dp"
        android:contentDescription="@string/txtViewJumJack"
        android:text="(A) Jumping Jacks"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtTimer1"
        android:layout_width="327dp"
        android:layout_height="158dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="46dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="40dp"
        android:contentDescription="@string/txtTimer1"
        android:drawableTop="@drawable/ic_baseline_timer_24"
        android:gravity="center"
        android:text="TextView"
        android:textColor="#971DAC"
        android:textSize="26sp"
        android:textStyle="bold" />


</RelativeLayout>