<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivityAdExB">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarAdExB"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:background="#FA2D73"
        android:contentDescription="@string/toolbarAdExB"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />


    <ImageView
        android:id="@+id/imgViewAdExB"
        android:layout_width="68dp"
        android:layout_height="54dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="343dp"
        android:layout_marginBottom="596dp"
        android:contentDescription="@string/imgViewAdExB"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24" />

    <TextView
        android:id="@+id/txtViewAdExB"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="-6dp"
        android:layout_marginBottom="599dp"
        android:contentDescription="@string/txtViewAdExB"
        android:text="20 min Advanced Workout Schedule No Equipment"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txtViewSquatHold"
        android:layout_width="209dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="116dp"
        android:layout_marginEnd="86dp"
        android:layout_marginBottom="520dp"
        android:contentDescription="@string/txtViewSquatHold"
        android:text="(A) Squat Hold"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtTimer8"
        android:layout_width="327dp"
        android:layout_height="158dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="46dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="40dp"
        android:contentDescription="@string/txtTimer8"
        android:drawableTop="@drawable/ic_baseline_timer_24"
        android:gravity="center"
        android:text="TextView"
        android:textColor="#971DAC"
        android:textSize="26sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imgViewSquatHold"
        android:layout_width="wrap_content"
        android:layout_height="327dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="92dp"
        android:layout_marginEnd="76dp"
        android:layout_marginBottom="198dp"
        android:contentDescription="@string/imgViewSquatHold"
        app:srcCompat="@drawable/exadb" />

</RelativeLayout>